kube/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hw-deployment
  labels:
    app: hw
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hw
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hw
    spec:
      containers:
        - image: ssv682/otus-homework-repo:latest
          name: otushw-stan
          ports:
            - name: web
              containerPort: 8000
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health
              port: 8000
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
            initialDelaySeconds: 10
