kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw-service
  namespace: m
spec:
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
  selector:
    app: hw
  type: NodePort
